--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -98,7 +98,7 @@ div#closedAccordionTitleWrapper {
 
 .teaser {
   line-height: @vertical-grid-half;
-  font-size: @small-font-size;
+  font-size: @font-small-size;
   .break-words;
 }
 
@@ -111,7 +111,7 @@ div#closedAccordionTitleWrapper {
 .offline-indicator {
   display: inline;
   vertical-align: top;
-  font-size: @small-font-size;
+  font-size: @font-small-size;
 }
 
 // ERRORS
@@ -164,7 +164,7 @@ header.static-page-header {
     a#today-link {
       float: left;
       color: @highlighted-element;
-      font-size: @small-font-size;
+      font-size: @font-small-size;
       margin-top: 10px;
       padding-left: @horizontal-grid + 4;
       height: @page-header-height;
@@ -199,7 +199,7 @@ header.static-page-header {
     font-size: @default-font-size;
   }
   .long-heading .heading {
-    font-size: @small-font-size;
+    font-size: @font-small-size;
   }
   .omni-button {
     .button;
@@ -213,7 +213,7 @@ header.static-page-header {
 
 nav#edit-header {
   button {
-    font-size: @small-font-size;
+    font-size: @font-small-size;
   }
 }
 
@@ -262,7 +262,7 @@ footer {
       font-size: @default-font-size;
     }
     &.omnibar-input-long {
-      font-size: @small-font-size;
+      font-size: @font-small-size;
     }
     &.omnibar-input-very-long {
       font-size: @smallest-font-size;
@@ -337,7 +337,7 @@ footer {
       height: @page-header-height;
     }
     a, span {
-      font-size: @small-font-size;
+      font-size: @font-small-size;
       .font-bold;
     }
     a.feature-link, a.lists-link {
@@ -446,7 +446,7 @@ li.datepicker-date {
           min-width: 11.11%;
           text-align: center;
           a {
-            font-size: @small-font-size;
+            font-size: @font-small-size;
             width: inherit;
             color: @highlighted-element;
             span {
