--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -116,7 +116,7 @@ section#welcome {
         padding-bottom: @vertical-grid;
       }
       #welcome-continue-link{
-        font-size: @small-font-size;
+        font-size: @font-small-size;
       }
     }
   }
@@ -154,7 +154,7 @@ section#signup {
     .content {
       height: @vertical-grid * 7;
       span#agreeText {
-        font-size: @small-font-size;
+        font-size: @font-small-size;
         color: @content;
         line-height: 19px;
         a {
