--- a/frontend/core/src/main/webapp/static/less/pikaday.less
+++ b/frontend/core/src/main/webapp/static/less/pikaday.less
@@ -59,7 +59,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     overflow: hidden;
     margin: 0;
     padding: 5px 3px;
-    font-size: @small-font-size;
+    font-size: @font-small-size;
     line-height: 30px;
     background-color: #fff;
 }
@@ -125,7 +125,7 @@ http://nicolasgallagher.com/micro-clearfix-hack/
     margin-top: 15px;
     font-family: 'icomoon' !important;
     speak: none;
-    font-size: @small-font-size;
+    font-size: @font-small-size;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
