--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -14,7 +14,7 @@
 
 @large-font-size: 21px;
 @default-font-size: 18px;
-@small-font-size: 15px;
+@font-small-size: 15px;
 @smallest-font-size: 12px;
 @slide-indicator-width: 0.5em;
 
