refactoring: .smallest-font -> .font-smallest

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -166,8 +166,8 @@ The following can be used to control font:
   font-size: @font-small-size;
 }
 
-.smallest-font {
-  font-size: @smallest-font-size;
+.font-smallest {
+  font-size: @font-smallest-size;
 }
 
 
@@ -188,7 +188,7 @@ The following can be used to control font:
 }
 
 .show-more {
-  .smallest-font;
+  .font-smallest;
   display: inherit;
   .center-horizontally;
   text-align: center;
