--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -81,7 +81,7 @@ div#closedAccordionTitleWrapper {
 }
 
 #email-verification-status {
-  font-size: @smallest-font-size;
+  font-size: @font-smallest-size;
   display: block;
   line-height: @vertical-grid-half;
 }
@@ -265,7 +265,7 @@ footer {
       font-size: @font-small-size;
     }
     &.omnibar-input-very-long {
-      font-size: @smallest-font-size;
+      font-size: @font-smallest-size;
     }
   }
   .omnibar-feature {
