--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -191,7 +191,7 @@ footer {
   -ms-text-justify: distribute-all-lines;
   text-justify: distribute-all-lines;
   .center-horizontally;
-  font-size: @smallest-font-size;
+  font-size: @font-smallest-size;
   nav {
     padding-top: 5px;
     ul {
