--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -3,7 +3,7 @@
 .form-group {
   p.validation-error {
     display: inline;
-    font-size: @smallest-font-size;
+    font-size: @font-smallest-size;
     color: @warning;
     line-height: @vertical-grid-half;
     vertical-align: top;
