--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -15,7 +15,7 @@
 @large-font-size: 21px;
 @default-font-size: 18px;
 @font-small-size: 15px;
-@smallest-font-size: 12px;
+@font-smallest-size: 12px;
 @slide-indicator-width: 0.5em;
 
 // Columns
