--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -150,6 +150,11 @@ And to four sections:
 /*
 The following can be used to control font:
 
+* `.font-bold`
+* `.font-small`
+* `.font-smallest`
+
+
 ```markup
 <p class="font-bold">font-bold</p>
 <p class="font-small">small font</p>
@@ -161,11 +166,9 @@ The following can be used to control font:
   font-family: @font-bold;
   font-weight: 700;
 }
-
 .font-small {
   font-size: @font-small-size;
 }
-
 .font-smallest {
   font-size: @font-smallest-size;
 }
