--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -157,8 +157,8 @@ The following can be used to control font:
 
 ```markup
 <p class="font-bold">font-bold</p>
-<p class="font-small">small font</p>
-<p class="font-bold">font-bold</p>
+<p class="font-small">font-small</p>
+<p class="font-smallest">font-smallest</p>
 
 ```
 */
