--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -46,7 +46,7 @@ button.keyword:disabled {
 
 input[type="checkbox"]:checked ~ a#accordionTitleLink {
   color: @default-element;
-  .fade-color;
+  .fade-fast;
 }
 
 div#accordionTitleHeightFix {
