fade bugfix #2, works now!

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -137,12 +137,12 @@ And to four sections:
 ```
 */
 .fade-fast {
-  -o-transition: 0.25 ease-in-out;
-  -moz-transition: 0.25 ease-in-out;
-  -khtml-transition: 0.25 ease-in-out;
-  -webkit-transition: 0.25 ease-in-out;
-  -ms-transition: 0.25 ease-in-out;
-  transition: 0.25 ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -khtml-transition: 0.25s ease-in-out;
+  -webkit-transition: 0.25s ease-in-out;
+  -ms-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
 }
 
 /*
