added inputs.less import

--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -6,6 +6,7 @@
 @import url("../static/less/variables.less");
 @import url("../static/less/common.less");
 @import url("../static/less/main.less");
+@import url("../static/less/inputs.less");
 /*
 @import url("../static/less/modal.less");
 */
