--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -17,3 +17,4 @@ This is a style guide that documents the LESS files for the extended mind projec
 @import "pages.less";
 @import "pikaday.less";
 @import "inputs.less";
+@import "typography.less";
