--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -7,6 +7,7 @@
 @import url("../static/less/common.less");
 @import url("../static/less/main.less");
 @import url("../static/less/inputs.less");
+@import "typography.less";
 /*
 @import url("../static/less/modal.less");
 */
