--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,12 +1,13 @@
-/*
-# extended mind - living style guide
-
-## introduction
-
-This is a style guide that documents the LESS files for the extended mind project.
-*/
-@import "normalize.less";
+// In the styleguide
 @import "icon.less";
+@import "inputs.less";
+@import "typography.less";
+@import "layout.less";
+
+// Not to be styleguided
+@import "normalize.less";
+
+// TO BE CLEANED & DIVIDED:
 @import "variables.less";
 @import "common.less";
 @import "main.less";
@@ -16,5 +17,3 @@ This is a style guide that documents the LESS files for the extended mind projec
 @import "components.less";
 @import "pages.less";
 @import "pikaday.less";
-@import "inputs.less";
-@import "typography.less";
