--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -1,13 +1,14 @@
 /*
 # extended mind - living style guide
 */
-@import url("../static/less/em.less");
 @import url("../static/less/icon.less");
 @import url("../static/less/variables.less");
 @import url("../static/less/common.less");
 @import url("../static/less/main.less");
 @import url("../static/less/inputs.less");
-@import "typography.less";
+@import url("../static/less/typography.less");
+@import url("../static/less/layout.less");
+
 /*
 @import url("../static/less/modal.less");
 */
