--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -3,6 +3,7 @@
 @import "inputs.less";
 @import "typography.less";
 @import "layout.less";
+@import "colors.less";
 
 // Not to be styleguided
 @import "normalize.less";
