--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -8,6 +8,7 @@
 @import url("../static/less/inputs.less");
 @import url("../static/less/typography.less");
 @import url("../static/less/layout.less");
+@import url("../static/less/colors.less");
 
 /*
 @import url("../static/less/modal.less");
