icon.less -> icons.less

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,5 +1,5 @@
 // In the styleguide
-@import "icon.less";
+@import "icons.less";
 @import "inputs.less";
 @import "typography.less";
 @import "layout.less";
