--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -1,7 +1,7 @@
 /*
 # extended mind - living style guide
 */
-@import url("../static/less/icon.less");
+@import url("../static/less/icons.less");
 @import url("../static/less/variables.less");
 @import url("../static/less/common.less");
 @import url("../static/less/main.less");
