--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -1,6 +1,6 @@
 @import "normalize.less";
 @import "variables.less";
-@import "icon.less";
+@import "icons.less";
 
 /*
 `.center-horizontally` centers the container by making the browser to calculate left and right margins automatically.
