--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,3 +1,9 @@
+/*
+
+Welcome to extended mind living styleguide. The styleguide is a resource for designers, product managers, and developers, providing a common language around em's UI patterns. We use it to maintain modular front-end code and visual consistency across the app.
+
+*/
+
 // In the styleguide
 @import "icons.less";
 @import "inputs.less";
