--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -1,6 +1,7 @@
 /*
 # extended mind - living style guide
 */
+@import url("../static/less/em.less");
 @import url("../static/less/icons.less");
 @import url("../static/less/variables.less");
 @import url("../static/less/common.less");
