--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -10,6 +10,7 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 @import "typography.less";
 @import "layout.less";
 @import "colors.less";
+@import "animations.less";
 
 // Not to be styleguided
 @import "normalize.less";
