--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -1,29 +1,5 @@
-
-
-/*
-`.fade-fast` fades to new color in 0.25 seconds.
-
-```markup
-<style>
-  .fade-fast {
-  }
-  .fade-fast:hover {
-   color: red;
-  }
-</style>
-<div class="fade-fast">Hover over me.</div>
-```
-*/
-.fade-fast {
-  -o-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
-  -khtml-transition: 0.25s ease-in-out;
-  -webkit-transition: 0.25s ease-in-out;
-  -ms-transition: 0.25s ease-in-out;
-  transition: 0.25s ease-in-out;
-}
-
-
+@import "normalize.less";
+@import "variables.less";
 
 // LINKS
 
