--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -10,6 +10,7 @@
 @import url("../static/less/typography.less");
 @import url("../static/less/layout.less");
 @import url("../static/less/colors.less");
+@import url("../static/less/animations.less");
 
 /*
 @import url("../static/less/modal.less");
