--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -11,6 +11,7 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 @import "layout.less";
 @import "colors.less";
 @import "animations.less";
+@import "links.less";
 
 // Not to be styleguided
 @import "normalize.less";
