--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -11,6 +11,7 @@
 @import url("../static/less/layout.less");
 @import url("../static/less/colors.less");
 @import url("../static/less/animations.less");
+@import url("../static/less/links.less");
 
 /*
 @import url("../static/less/modal.less");
