--- a/frontend/core/src/main/webapp/static/less/colors.less
+++ b/frontend/core/src/main/webapp/static/less/colors.less
@@ -1,7 +1,16 @@
-// Temporary classes (to be refactored)
+// to be refactored?
 .default-element {
   color: @default-element;
 }
+
+.content {
+  color: @content;
+}
+
+a.content:active {
+  color: @content-pressed;
+}
+
 
 // Colors
 @content: black;
