--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -5,6 +5,7 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 */
 
 // In the styleguide
+@import "notifications.less";
 @import "icons.less";
 @import "inputs.less";
 @import "typography.less";
@@ -20,7 +21,6 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 @import "variables.less";
 @import "common.less";
 @import "main.less";
-@import "modal.less";
 @import "swiper.less";
 @import "grid.less";
 @import "components.less";
