--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -5,6 +5,7 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 */
 
 // In the styleguide
+@import "foundation.less";
 @import "notifications.less";
 @import "icons.less";
 @import "inputs.less";
@@ -17,9 +18,8 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 // Not to be styleguided
 @import "normalize.less";
 
-// TO BE CLEANED & DIVIDED:
+// TO BE STYLEGUIDED & DIVIDED:
 @import "variables.less";
-@import "common.less";
 @import "main.less";
 @import "swiper.less";
 @import "grid.less";
