--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -20,6 +20,9 @@
 	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	font-size: @icon-size;
+  color: @icon;
 }
 
 .icon-pencil:before {
@@ -50,9 +53,12 @@
 }
 .icon-logo-with-text:before {
 	content: "\e606";
+	color: @logo;
+  font-size: @banner-logo-size;
 }
 .icon-logo-only:before{
 	content: "\e607";
+	color: @logo;
 }
 .icon-inbox:before {
 	content: "\e608";
@@ -65,7 +71,18 @@
 }
 .icon-arrow-right:before {
 	content: "\e60b";
+	font-size: @slide-indicator-width;
 }
+
 .icon-arrow-left:before {
 	content: "\e60c";
+	font-size: @slide-indicator-width;
+}
+
+// beta text
+.web .icon-logo-with-text:after, .android .icon-logo-with-text:after {
+  content: "beta";
+  font-size: 10px;
+  position: absolute;
+  margin-left: -20px;
 }
