--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -4,7 +4,7 @@ Fundamentals that affect the whole app.
 
 @import "normalize.less";
 @import "variables.less";
-@import "common.less";
+@import "foundation.less";
 
 * {
   // Use the same font throughout
