--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -32,3 +32,24 @@ The following can be used to control font:
 .font-smallest {
   font-size: @font-smallest-size;
 }
+
+.instruction-text {
+  color: @instruction;
+  display: block;
+  text-align: center;
+  line-height: 19px;
+  .icon-logo-only {
+    font-size: @font-small-size;
+  }
+  .instruction-text-chapter {
+    padding-bottom: @vertical-grid;
+  }
+  .instruction-text-chapter-details {
+    font-size: @font-small-size;
+    padding-bottom: @vertical-grid;
+  }
+}
+
+.subheading {
+  padding-top: @vertical-grid-half;
+}
