--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -25,3 +25,44 @@
   transition: 0.25s ease-in-out;
 }
 
+// GRADIENTS
+
+.edges-fade-to-white {
+  /* IE10 Consumer Preview */
+  background-image: -ms-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%, rgba(255, 255, 255, 0) 75%, #FFFFFF 100%);
+
+  /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%, rgba(255, 255, 255, 0) 75%, #FFFFFF 100%);
+
+  /* Opera */
+  background-image: -o-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%, rgba(255, 255, 255, 0) 75%, #FFFFFF 100%);
+
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #FFFFFF), color-stop(0.2, rgba(255, 255, 255, 0)), color-stop(0.8, rgba(255, 255, 255, 0)), color-stop(1, #FFFFFF));
+
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%, rgba(255, 255, 255, 0) 75%, #FFFFFF 100%);
+
+  /* W3C Markup, IE10 Release Preview */
+  background-image: linear-gradient(to right, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%, rgba(255, 255, 255, 0) 75%, #FFFFFF 100%);
+}
+
+.left-edge-fades-to-white {
+  /* IE10 Consumer Preview */
+  background-image: -ms-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%);
+
+  /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%);
+
+  /* Opera */
+  background-image: -o-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%);
+
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #FFFFFF), color-stop(0.2, rgba(255, 255, 255, 0)), color-stop(0.8, rgba(255, 255, 255, 0)), color-stop(1, #FFFFFF));
+
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(left, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%);
+
+  /* W3C Markup, IE10 Release Preview */
+  background-image: linear-gradient(to right, #FFFFFF 0%, rgba(255, 255, 255, 0) 25%);
+}
