restored modal.less

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -19,6 +19,7 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 @import "normalize.less";
 @import "pikaday.less";
 @import "swiper.less";
+@import "modal.less";
 
 // TO BE STYLEGUIDED & DIVIDED:
 @import "variables.less";
