--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -71,8 +71,7 @@
 	content: "\e60c";
 }
 
-
-// ICOMOON TWEAKS
+// em specific tweaks
 [class^="icon-"], [class*=" icon-"] {
   font-size: @icon-size;
   color: @icon;
