removed variables.less, updated @import statements around new less files

--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -1,3 +1,11 @@
+@import "foundation.less";
+@import "normalize.less";
+@import "variables.less";
+@import "icons.less";
+
+@plus-button-width: 27px;
+@icon-button-width: @plus-button-width;
+
 // FORMS
 
 .form-group {
