--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -1,11 +1,20 @@
+@import "foundation.less";
 @import "normalize.less";
 @import "variables.less";
 @import "icons.less";
 
-
 /*
 # Typography
 */
+
+@font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+@font-bold: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLT-Roman', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+
+@large-font-size: 21px;
+@default-font-size: 18px;
+@font-small-size: 15px;
+@font-smallest-size: 12px;
+@slide-indicator-width: 0.5em;
 
 /*
 The following can be used to control font:
