--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -1,3 +1,11 @@
+@import "foundation.less";
+@import "normalize.less";
+@import "variables.less";
+@import "icons.less";
+
+@icon-size: 28px;
+@banner-logo-size: 70px;
+
 @font-face {
 	font-family: 'icomoon';
 	src:url('../fonts/icomoon.eot');
