--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -1,3 +1,12 @@
+@import "foundation.less";
+@import "normalize.less";
+@import "variables.less";
+@import "icons.less";
+
+@danger-text: @delete-button;
+@rounded-corner-radius: 15px;
+@max-modal-width: 400px;
+
 /*
 # Warnings
 */
