main.less removed

--- a/frontend/core/src/main/webapp/static/less/animations.less
+++ b/frontend/core/src/main/webapp/static/less/animations.less
@@ -1,5 +1,6 @@
+@import "foundation.less";
 @import "normalize.less";
-@import "variables.less";
+@import "icons.less";
 
 /*
 `.fade-fast` fades to new color in 0.25 seconds.
