--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -1,6 +1,14 @@
+@import "foundation.less";
 @import "normalize.less";
-@import "variables.less";
+@import "icons.less";
 
+a {
+  text-decoration: none;
+  color: @default-element;
+}
+a:active {
+  color: @default-element-pressed;
+}
 
 .highlighted-link {
   color: @highlighted-element;
