--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -15,11 +15,11 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 @import "animations.less";
 @import "links.less";
 
+// This needs to be thinked: either we move everything to the files above or leave it as em specific less library
+@import "components.less";
+
 // Not to be styleguided
 @import "normalize.less";
 @import "pikaday.less";
 @import "swiper.less";
 @import "modal.less";
-
-// TO BE STYLEGUIDED & DIVIDED:
-@import "components.less";
