--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -18,7 +18,7 @@ Welcome to extended mind living styleguide. The styleguide is a resource for des
 // This needs to be thinked: either we move everything to the files above or leave it as em specific less library
 @import "components.less";
 
-// Not to be styleguided
+// Not to be styleguided (not our code)
 @import "normalize.less";
 @import "pikaday.less";
 @import "swiper.less";
