fixed less @imports

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -1,4 +1,6 @@
-@import "normalize.less";
+@import "colors.less";
+@import "typography.less";
+@import "layout.less";
 
 * {
   // Use the same font throughout
