--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -1,11 +1,22 @@
-@import "foundation.less";
-
 /*
 # Typography
 */
 
-@font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-@font-bold: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLT-Roman', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+/*
+Following fonts are used:
+* HelveticaNeue-Light
+* Helvetica Neue Light
+* HelveticaNeueLTStd-Lt
+* Helvetica Neue
+* Arial
+* Helvetica
+* sans-serif
+
+(Bold letters use HelveticaNeueLT-Roman instead of HelveticaNeueLTStd-Lt.)
+*/
+
+@font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLTStd-Lt', 'Helvetica Neue', 'Arial', 'Helvetica', 'sans-serif';
+@font-bold: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'HelveticaNeueLT-Roman', 'Helvetica Neue', 'Arial', 'Helvetica', 'sans-serif';
 
 @large-font-size: 21px;
 @default-font-size: 18px;
