components.less > widgets.less

--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -22,6 +22,4 @@ The styleguide is a resource for designers, product managers, and developers, pr
 @import "colors.less";
 @import "animations.less";
 @import "links.less";
-
-// This needs to be thinked: either we move everything to the files above or leave it as em specific less library
-@import "components.less";
+@import "widgets.less";
