--- a/frontend/core/src/main/webapp/styleguide/css/imports.css
+++ b/frontend/core/src/main/webapp/styleguide/css/imports.css
@@ -11,3 +11,4 @@
 @import url("../static/less/animations.less");
 @import url("../static/less/links.less");
 @import url("../static/less/notifications.less");
+@import url("../static/less/widgets.less");
