--- a/frontend/core/src/main/webapp/static/less/colors.less
+++ b/frontend/core/src/main/webapp/static/less/colors.less
@@ -66,3 +66,7 @@ a.content:active {
 @pikaday-selected-button-pressed: darken(@pikaday-selected-button, 20%);
 
 @overdue-task: @delete-button;
+
+.dashboard-info {
+  color: @default-element;
+}
