--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -80,3 +80,56 @@
   max-width: @max-modal-width;
 }
 
+#modalFooter {
+  button[disabled].normal-button {
+    color: white;
+    background-color: @default-button-pressed;
+  }
+}
+
+/* # OMNIBAR TOAST NOTIFICATION */
+
+.toaster-notification {
+  max-width: @one-column-grid-width;
+  margin: auto;
+  position: fixed;
+  bottom: @vertical-grid-half;
+  height: @vertical-grid;
+  left: @horizontal-grid;
+  right: @horizontal-grid;
+  background-color: @normal-button-disabled;
+  padding-left: 15px;
+  span, a {
+    padding: 0;
+  }
+  a.toaster-x-mark {
+    padding-right: 15px;
+  }
+}
+
+.toaster-notification.ng-enter, .toaster-notification.ng-leave,
+.pikaday-animation.ng-enter, .pikaday-animation.ng-leave,
+.select-list-visible-animation.ng-enter {
+  -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
+}
+
+.toaster-notification.ng-enter,
+.toaster-notification.ng-leave.ng-leave-active,
+.pikaday-animation.ng-enter,
+.pikaday-animation.ng-leave.ng-leave-active,
+.select-list-visible-animation.ng-enter {
+  opacity: 0;
+}
+
+.toaster-notification.ng-leave,
+.toaster-notification.ng-enter.ng-enter-active,
+.pikaday-animation.ng-leave,
+.pikaday-animation.ng-enter.ng-enter-active,
+.select-list-visible-animation.ng-enter.ng-enter-active {
+  opacity: 1;
+}
+
