--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -2,7 +2,7 @@
 Extended Mind specific UI-components.
 */
 
-// ACCORDION
+/* # ACCORDION */
 
 .accordion-item-active {
   padding-top: 5px;
@@ -70,31 +70,8 @@ div#closedAccordionTitleWrapper {
   overflow: hidden;
 }
 
-// SIMPLE CONTENT
 
-.simple-content {
-  padding-bottom: @vertical-grid;
-}
-
-.simple-content:last-child {
-  padding-bottom: 0;
-}
-
-#email-verification-status {
-  font-size: @font-smallest-size;
-  display: block;
-  line-height: @vertical-grid-half;
-}
-
-.dashboard-info {
-  color: @default-element;
-}
-
-.tasks-notes-container {
-  padding-top: @vertical-grid-half;
-}
-
-// TEASER
+/* # TEASER */
 
 .teaser {
   line-height: @vertical-grid-half;
@@ -106,37 +83,8 @@ div#closedAccordionTitleWrapper {
   padding-bottom: @vertical-grid-half;
 }
 
-// ERRORS
 
-#errorMessage {
-  h3 {
-    text-align: center;
-    padding-bottom: @vertical-grid;
-  }
-}
-
-// MODALS
-
-#modalFooter {
-  button[disabled].normal-button {
-    color: white;
-    background-color: @default-button-pressed;
-  }
-}
-
-// ADD ITEM/NOTE/TASK..
-
-.add-element {
-  // Add @vertical grid to make room for 'add [item]...' input
-  padding-bottom: @vertical-grid-half;
-}
-
-.add-new-list-item-cancel {
-  color: #e22c09;
-  padding-right: 15px;
-}
-
-// PAGE HEADER
+/* # HEADER */
 
 header.static-page-header {
   background-color: white;
@@ -203,7 +151,7 @@ header.static-page-header {
   }
 }
 
-// FOOTER
+/* # FOOTER */
 
 footer {
   a[class^='active-slide'], a[class*=' active-slide'] {
@@ -229,7 +177,7 @@ footer {
   }
 }
 
-// OMNIBAR
+/* # OMNIBAR */
 
 .omnibar-container {
   width: 100%;
@@ -306,7 +254,7 @@ footer {
   animation: .3s fade-out;
 }
 
-// MENU
+/* # MENU */
 
 #menu {
   background-color: @menu;
@@ -381,7 +329,7 @@ footer {
   background-color: white;
 }
 
-// DATEPICKER
+/* # DATEPICKER */
 
 li.datepicker-date {
   line-height: @vertical-grid-half;
@@ -470,168 +418,4 @@ li.datepicker-date {
       }
     }
   }
-}
-
-// FORMS
-
-.inline-form-fields {
-  padding-bottom: 10px;
-}
-
-// LOADING ANIMATION
-
-.loading-animation {
-  position: relative;
-  height: inherit;
-  padding-top: @vertical-grid * 3;
-  color: @default-element;
-  text-align: center;
-}
-
-// FADE OUT TOO LONG TEXT ELLIPSIS
-// From: http://www.mobify.com/blog/multiline-ellipsis-in-pure-css/
-
-.ellipsis {
-  overflow: hidden;
-  height: @vertical-grid;
-  line-height: 22px;
-}
-
-.ellipsis:before {
-  content: "";
-  float: left;
-  width: 5px;
-  height: @vertical-grid;
-}
-
-.ellipsis > span {
-  float: right;
-  width: 100%;
-  margin-left: -5px;
-}
-
-.ellipsis:after {
-  content: "\00a0";
-
-  box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-
-  float: right;
-  position: relative;
-  top: -24px;
-  left: 100%;
-  width: 7em;
-  margin-left: -7em;
-  padding-right: 5px;
-  text-align: right;
-  background: -webkit-gradient(linear, left top, right top,
-    from(rgba(255, 255, 255, 0)), to(white), color-stop(75%, white));
-  background: -moz-linear-gradient(to right, rgba(255, 255, 255, 0), white 75%, white);
-  background: -o-linear-gradient(to right, rgba(255, 255, 255, 0), white 75%, white);
-  background: -ms-linear-gradient(to right, rgba(255, 255, 255, 0), white 75%, white);
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), white 75%, white);
-}
-
-// EDITABLE FIELD
-
-.editable-field-backdrop {
-  -webkit-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -moz-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -o-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -ms-transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  transition: background-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.onboarding-bubble:after {
-  -webkit-transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -moz-transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -o-transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  -ms-transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-  transition: border-bottom-color cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.editable-field-backdrop.active {
-  background-color: #f6f6f6 !important;
-  &.backdrop-disable * {
-    pointer-events: none;
-  }
-
-  // In Android, scrolling is not possible form pointer-events:none, even though in iOS it is
-  // TODO: The latter is for timeline.html where the section below inner-slide-content-container
-  //       is the one with scrolling. This could be nicer.
-  &.backdrop-disable .inner-page-content-container, &.backdrop-disable .inner-slide-content-container section {
-    pointer-events: auto;
-  }
-
-  .onboarding-bubble:after {
-    border-bottom-color: #f6f6f6 !important;
-  }
-}
-
-.editable-field-backdrop.active, .editable-field-backdrop.animating {
-  .ellipsis:after {
-    background-image: none !important;
-  }
-  #feature-container-wrapper, #feature-container,
-  .border-button, .add-button,
-  .static-page-header {
-    background-color: inherit;
-  }
-}
-
-.backdrop-disable .editable-field-container.active {
-  * {
-    pointer-events: auto !important;
-  }
-}
-
-.editable-field.active, .editable-field-container.active {
-  background-color: white;
-}
-
-// OMNIBAR TOAST NOTIFICATION
-
-.toaster-notification {
-  max-width: @one-column-grid-width;
-  margin: auto;
-  position: fixed;
-  bottom: @vertical-grid-half;
-  height: @vertical-grid;
-  left: @horizontal-grid;
-  right: @horizontal-grid;
-  background-color: @normal-button-disabled;
-  padding-left: 15px;
-  span, a {
-    padding: 0;
-  }
-  a.toaster-x-mark {
-    padding-right: 15px;
-  }
-}
-
-.toaster-notification.ng-enter, .toaster-notification.ng-leave,
-.pikaday-animation.ng-enter, .pikaday-animation.ng-leave,
-.select-list-visible-animation.ng-enter {
-  -webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-  transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s;
-}
-
-.toaster-notification.ng-enter,
-.toaster-notification.ng-leave.ng-leave-active,
-.pikaday-animation.ng-enter,
-.pikaday-animation.ng-leave.ng-leave-active,
-.select-list-visible-animation.ng-enter {
-  opacity: 0;
-}
-
-.toaster-notification.ng-leave,
-.toaster-notification.ng-enter.ng-enter-active,
-.pikaday-animation.ng-leave,
-.pikaday-animation.ng-enter.ng-enter-active,
-.select-list-visible-animation.ng-enter.ng-enter-active {
-  opacity: 1;
 }
