name change: teaser -> excerpt (affects multiple classes

--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -71,15 +71,17 @@ div#closedAccordionTitleWrapper {
 }
 
 
-/* # TEASER */
+/* # EXCERPT
+(Previously known as "teaser")
+*/
 
-.teaser {
+.excerpt {
   line-height: @vertical-grid-half;
   font-size: @font-small-size;
   .break-words;
 }
 
-.teaser, .teaser-empty {
+.excerpt, .excerpt-empty {
   padding-bottom: @vertical-grid-half;
 }
 
