--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -6,11 +6,12 @@ The styleguide is a resource for designers, product managers, and developers, pr
 
 */
 
-
+// External code
 @import "normalize.less";
 @import "swiper.less";
 @import "modal.less";
 
+// EM code
 @import "layout.less";
 @import "typography.less";
 @import "colors.less";
