--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -100,3 +100,11 @@ html {
   -ms-hyphens: auto;
   hyphens: auto;
 }
+
+// Header
+@page-header-height: 60px;
+@heading-header-height: 60px;
+@content-heading-height: 34px;
+
+// Footer
+@footer-height: 60px;
