--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -1,6 +1,4 @@
-@import "colors.less";
-@import "typography.less";
-@import "layout.less";
+@import "normalize.less";
 
 * {
   // Use the same font throughout
