--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -27,6 +27,13 @@ Following fonts are used:
 @font-smallest-size: 12px;
 @slide-indicator-width: 0.5em;
 
+* {
+  font-family: @font;
+}
+html {
+  font-size: @default-font-size;
+}
+
 h1, h2, h3, h4, h5, h6 {
   .font-bold;
   margin: 0;
