--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -32,6 +32,19 @@ html {
   }
 }
 
+// Baseline
+@horizontal-grid: 30px;
+@vertical-grid: 44px;
+@vertical-grid-half: 19px;
+
+// Header
+@page-header-height: 60px;
+@heading-header-height: 60px;
+@content-heading-height: 34px;
+
+// Footer
+@footer-height: 60px;
+
 // SCREEN READERS
 .sr-only {
   position: absolute;
@@ -94,11 +107,3 @@ html {
   -ms-hyphens: auto;
   hyphens: auto;
 }
-
-// Header
-@page-header-height: 60px;
-@heading-header-height: 60px;
-@content-heading-height: 34px;
-
-// Footer
-@footer-height: 60px;
