--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -34,6 +34,15 @@ html {
   font-size: @default-font-size;
 }
 
+/*
+All headings are same:
+<h1>h1</h1>
+<h2>h2</h2>
+<h3>h3</h3>
+<h4>h4</h4>
+<h5>h5</h5>
+<h6>h6</h6>
+*/
 h1, h2, h3, h4, h5, h6 {
   .font-bold;
   margin: 0;
